Add displays and styling.

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,48 @@
   <body>
     <h1>Welcome to the Internet of Paljus!</h1>
     
-    <div class="chart">
-      <div class="ct-chart ct-minor-seventh"></div>
+    <div class="container">
+      <div class="chart">
+        <div class="ct-chart ct-minor-seventh"></div>
+      </div>
+      
+      <div class="displays">
+        <div class="rim">
+          <div class="inset">
+            <div class="emboss">
+              <div class="dent">
+                <div class="content">
+                    23<span>.9</span><strong>o</strong>
+                    <div class="label">L&auml;mp&ouml;tila</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="rim">
+          <div class="inset">
+            <div class="emboss">
+              <div class="dent">
+                <div class="content">
+                  1.5<span>h</span>
+                  <div class="label">Odottelua</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <svg>
+      <defs>
+        <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+          <!--<stop offset="0%" stop-color="#df3341"/>-->
+          <stop offset="0%" stop-color="#fe9804"/>
+          <stop offset="50%" stop-color="#d4f355"/>
+          <stop offset="100%" stop-color="#35cbe5"/>
+        </linearGradient>
+      </defs>
+    </svg>
   </body>
 </html>
