Adapt gradient colors according to temperature.

--- a/app/index.html
+++ b/app/index.html
@@ -57,13 +57,19 @@
         </div>
       </div>
     </div>
+    
     <svg>
       <defs>
         <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
           <!--<stop offset="0%" stop-color="#df3341"/>-->
-          <stop offset="0%" stop-color="#fe9804"/>
-          <stop offset="50%" stop-color="#d4f355"/>
-          <stop offset="100%" stop-color="#35cbe5"/>
+          <!--
+          <stop id="stopLeft" offset="0%" stop-color="#fe9804"/>
+          <stop id="stopMiddle" offset="50%" stop-color="#d4f355"/>
+          <stop  id="stopRight" offset="100%" stop-color="#35cbe5"/>-->
+          
+          <stop id="s1" offset="0%"/>
+          <stop id="s2" offset="50%"/>
+          <stop id="s3" offset="100%"/>
         </linearGradient>
       </defs>
     </svg>
