Load moment.js from CDN.

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     
     <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery/3.0.0-beta1/jquery.min.js"></script>
-    <script src="js/moment-with-locales.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment-with-locales.min.js"></script>
     <!--<script src="js/Chart.Core.min.js"></script>
     <script src="js/Chart.Scatter.min.js"></script>-->
     
