Toggle time formats and messages.

--- a/app/index.html
+++ b/app/index.html
@@ -29,26 +29,30 @@
       
       <div class="displays">
         <div id="temperature-display" class="display">
-          <div class="emboss">
-            <div class="dent">
-              <div class="content">
-                  <div id="temperature-value">
-                    --
-                  </div>
-                  <div id="temperature-label" class="label">L&auml;mp&ouml;tila</div>
+          <div class="alert">
+            <div class="emboss">
+              <div class="dent">
+                <div class="content">
+                    <div id="temperature-value">
+                      --
+                    </div>
+                    <div id="temperature-label" class="label">L&auml;mp&ouml;tila</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
         
         <div id="estimate-display" class="display">
-          <div class="emboss">
-            <div class="dent">
-              <div class="content">
-                <div id="estimate-value">
-                  --
+          <div class="alert">
+            <div class="emboss">
+              <div class="dent">
+                <div class="content">
+                  <div id="estimate-value">
+                    --
+                  </div>
+                  <div id="estimate-label" class="label">Kylpyvalmis</div>
                 </div>
-                <div id="estimate-label" class="label">Kylpyvalmis</div>
               </div>
             </div>
           </div>
