Show outside temperature.

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,8 @@
     <!-- endbuild -->
   </head>
   <body>
+    <div id="outside-temperature">Ulkol&auml;mp&ouml;tila: <span id="outside-temperature-value">--</span></div>
+
     <div class="dashboard">
       
       <div class="displays">
